--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,8 @@ python-jose[cryptography]>=3.3.0
 python-multipart>=0.0.9
 httpx>=0.27.0
 supabase>=2.16.0
+openai>=1.60.0
+openai-agents>=0.1.0
+cryptography>=44.0.0
+PyPDF2>=3.0.0
+python-docx>=1.1.0
